syntax = "proto3";
package job.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "job/v1/status.proto";

option go_package = "github.com/jeffrom/job-manager/pkg/job";


message Result {
  int32 attempt = 1;
  Status status = 2;
  google.protobuf.Value data = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp completed_at = 5;
}
